--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="slickProject/natives"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="nativesmac"/>
 	<classpathentry kind="lib" path="lib/jinput.jar"/>
 	<classpathentry kind="lib" path="lib/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="lib/lwjgl.jar">
