--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,3 @@
-/lwjgl-assimp-natives-macos-arm64.jar
-/lwjgl-assimp-natives-macos.jar
-/lwjgl-nanovg-natives-macos-arm64.jar
-/lwjgl-nanovg-natives-macos.jar
-/lwjgl-openal-natives-macos-arm64.jar
-/lwjgl-openal-natives-macos.jar
-/lwjgl-opengl-natives-macos-arm64.jar
-/lwjgl-opengl-natives-macos.jar
-/lwjgl-openvr-natives-macos.jar
-/lwjgl-par-natives-macos-arm64.jar
-/lwjgl-par-natives-macos.jar
-/lwjgl-tinyfd-natives-macos-arm64.jar
-/lwjgl-tinyfd-natives-macos.jar
-/lwjgl-tootle-natives-macos.jar
-/lwjgl-vulkan-natives-macos-arm64.jar
-/lwjgl-vulkan-natives-macos.jar
-/lwjgl-xxhash-natives-macos-arm64.jar
-/lwjgl-xxhash-natives-macos.jar
+/liblwjgl.dylib
+/liblwjgl.dylib.git
+/liblwjgl.dylib.sha1
